--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Manisha\AppData\Local\Temp\testng-eclipse-1866564740\testng-customsuite.xml</span>
+                    <span>C:\Users\Manisha\AppData\Local\Temp\testng-eclipse-283697006\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -196,7 +196,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Manisha\AppData\Local\Temp\testng-eclipse-1866564740\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Manisha\AppData\Local\Temp\testng-eclipse-283697006\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -247,29 +247,29 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'negativeTest2')
+data.setCell(0, 1, 'negativeTest3')
 data.setCell(0, 2, 'myProject.LoginPage')
-data.setCell(0, 3, 14048);
+data.setCell(0, 3, 14710);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validTest1')
+data.setCell(1, 1, 'negativetest1')
 data.setCell(1, 2, 'myProject.LoginPage')
-data.setCell(1, 3, 13700);
+data.setCell(1, 3, 14551);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'isAmountSorted')
+data.setCell(2, 1, 'validTest1')
 data.setCell(2, 2, 'myProject.LoginPage')
-data.setCell(2, 3, 13408);
+data.setCell(2, 3, 14357);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'negativetest1')
+data.setCell(3, 1, 'isAmountSorted')
 data.setCell(3, 2, 'myProject.LoginPage')
-data.setCell(3, 3, 13387);
+data.setCell(3, 3, 13354);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'negativeTest3')
+data.setCell(4, 1, 'negativeTest2')
 data.setCell(4, 2, 'myProject.LoginPage')
-data.setCell(4, 3, 13326);
+data.setCell(4, 3, 13235);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'assertion')
 data.setCell(5, 2, 'myProject.LoginPage')
-data.setCell(5, 3, 5121);
+data.setCell(5, 3, 5122);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -301,78 +301,86 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">myProject.LoginPage</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">reportGenarate</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">164 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">assertion</span>
-                <span class="method-start">2338 ms</span>
+                <span class="method-start">4829 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">7471 ms</span>
+                <span class="method-start">9969 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">7692 ms</span>
+                <span class="method-start">10269 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validTest1</span>
-                <span class="method-start">9500 ms</span>
+                <span class="method-start">13030 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">23202 ms</span>
+                <span class="method-start">27395 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">23434 ms</span>
+                <span class="method-start">27703 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">negativetest1</span>
-                <span class="method-start">25138 ms</span>
+                <span class="method-start">29095 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">38533 ms</span>
+                <span class="method-start">43652 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">38777 ms</span>
+                <span class="method-start">43865 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">negativeTest2</span>
-                <span class="method-start">39933 ms</span>
+                <span class="method-start">46593 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">54017 ms</span>
+                <span class="method-start">59837 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">54277 ms</span>
+                <span class="method-start">60160 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">negativeTest3</span>
-                <span class="method-start">56109 ms</span>
+                <span class="method-start">61656 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">69447 ms</span>
+                <span class="method-start">76368 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">69671 ms</span>
+                <span class="method-start">76615 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">isAmountSorted</span>
-                <span class="method-start">70823 ms</span>
+                <span class="method-start">79216 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">84232 ms</span>
+                <span class="method-start">92571 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="configuration-class after">
+                <span class="method-name">reportFlush</span>
+                <span class="method-start">92808 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
